# shop-tools

./: .gitignore  Dockerfile  bfnbfjgbfg.py  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_code.py
account_app/: admin.py  apps.py  managers.py  models.py  signals.py  tasks.py  validators.py
account_app/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_initial.py  0002_privatenotification_notif_type.py  0003_privatenotification_is_read.py  0003_remove_profile_display_name_remove_profile_full_name_and_more.py  0003_useraddress.py  0004_alter_privatenotification_deleted_at_and_more.py  0004_privatenotification.py  0004_privatenotification_notifi_redirect_url.py  0005_alter_privatenotification_deleted_at_and_more.py  0005_alter_user_email.py  0005_ticketroom_ticket.py  0006_alter_user_username.py  0006_rename_state_name_state_name_state_slug_and_more.py  0007_alter_privatenotification_options_and_more.py  0007_alter_user_mobile_phone.py  0008_city_state_useraddress_city_city_state_and_more.py  0008_state_is_active.py  0009_city_is_active.py  0010_alter_privatenotification_options_and_more.py  0011_city_created_at_city_updated_at.py  0012_city_tel_prefix_state_created_at_state_updated_at_and_more.py  0013_alter_city_tel_prefix.py  0014_city_deleted_at_city_is_deleted_state_deleted_at_and_more.py  0015_alter_city_is_active_and_more.py  0015_remove_useraddress_is_default_alter_user_email_and_more.py  0016_alter_user_mobile_phone.py  0016_merge_20260611_1704.py  0017_alter_user_mobile_phone.py  0018_alter_user_email_alter_user_username.py  0019_remove_useraddress_is_default.py  0020_merge_20260611_2239.py
base_image/: Dockerfile  requirements.txt
blog_app/: admin.py  apps.py  models.py  signlas.py
blog_app/migrations/: 0001_initial.py  0002_alter_categoryblog_category_name_and_more.py  0002_alter_categoryblog_category_slug.py  0002_alter_postblog_deleted_at_alter_postblog_is_deleted_and_more.py  0003_alter_categoryblog_table.py  0003_alter_postblog_deleted_at_alter_postblog_is_deleted_and_more.py  0003_postblog_post_introduction.py  (+4 more)
core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/utils/: jwt.py  (+17 more)
core_app/: admin.py  apps.py  managers.py  models.py  signals.py  tasks.py
discount_app/: admin.py  apps.py  managers.py  models.py
env_folder/: db.env
front_end/: .env.local  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
gstools_data/: db.py
nginx/: Dockerfile  nginx.conf
order_app/: admin.py  apps.py  models.py  signals.py  tasks.py
product_app/: admin.py  apps.py  models.py  signals.py  tasks.py
scripts/: backup_db.sh  gunicorn.conf.py  start.sh
third_api_app/: apps.py
(+583 files in other folders)
